# Course-project

./: pyproject.toml
data/: operations.xls  operations_example.xls
src/: check_api.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_check_api.py  test_report.py  test_services.py  test_utils.py  test_views.py
