[tool.poetry]
name = "transaction-analytic"
version = "0.1.0"
description = ""
authors = ["<Mariya Polshkova> <<polshkovamamariya@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
pandas = "^2.1.3"
xlrd = "^2.0.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
